feat: expand media manager v2 capabilities